SVN Version
	* Fixed some threadsafty issues in the ServicesManager class.
	* Fixed error message sending issue.
	* Added ability to get/remove device from the list of devices used for
	sending/receiving raw messages by ServicesManager class.
	* Added Russian localization to the qrsc utility.

2010-02-14 Version 1.0.0
	* Added singleton factory for serializers. Explicit serializer
	creation is no more required.
	* Serializer test suit skips test instead of fail it if serializer
	doesn't suport argument type. (The only type that any serializer must
	support are QString and int)
	* DeviceManager class removed from library public interface. Use
	ServicesManager::addDevice instead of it.
	* Added signal clientError which is emited if received message is
	incorrect.
	* Added serializer versioning support.
	* Added QDataStream based serializer.
	* Added CMake Config file installation.
	* Added ability to install QMake feature file into Qt4 installation
	directory.
	* Output of qrsc --help improved to better satisfy help2man
	requirements. Generated man page looks much better then before.

2009-11-30 Version 0.7.0
	* Build issues on windows are fixed.
	* Added ability to work with QIODevice to the ServicesManager class.
	* Added man page for qrsc utility. This manual page is generated by
	help2man program.
	* Improved error messages handling.
	* <method> element in the interface description is changed to <slot>.
	Automtic schema update can be done with qrsc utility.
	* Added <signal> elemnt to support remote signal/slot calls in both
	directions.
	* Added doxygen comments covering all library public API.
	* Written tutorial of library ussage.
	* Added qmake configuration feature file to build projects using
	QRemoteSignal.

2009-10-14 Version 0.6.0
	* Added support for the folowing types: QChar, char, signed char,
	unsigned char, short, unsigned short, unsigned, long, unsigned long,
	long long, unsigned long long, bool, QList<T>, QMap<QString,T> (where